--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script src="dist/assets/js/scrollspy.js"></script>
+        <script src="dist/assets/js/bootstrap.min.js"></script>
         <script src="dist/assets/js/bundle.js"></script>
     </body>
 </html>
